2-k3s/09.filebrowser/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: filebrowser
  labels:
    app: filebrowser
spec:
  type: ClusterIP
  selector:
    app: filebrowser
  ports:
    - name: http
      port: 80
      targetPort: http
